--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@steveeeie/react-page-transition": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "react-swipeable": "^7.0.1"
+    "react-router-page-transition": "^3.1.0",
+    "react-swipeable": "^7.0.1",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
